# docs/openapi_applications.yaml
@@ -74,6 +74,16 @@ paths:
           required: false
           description: Сортировка всех заявок по id соревнования
           example: cd9018b7-d916-4721-a772-69299b0a4004
+        - in: query
+          name: date_filter
+          schema:
+            type: string
+            enum:
+              - last30
+              - last7
+          required: false
+          description: Сортировка всех заявок по дате отправки
+          example: last30
       responses:
         '200':
           description: Успешное получение списка заявок
